--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>プログラミング教育研究所</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-	<link rel="stylesheet" href="/css/bulma.css">
-	<link rel='stylesheet' href='/css/style.css' type='text/css' media='all' />
+	<link rel="stylesheet" href="./css/bulma.css">
+	<link rel='stylesheet' href='./css/style.css' type='text/css' media='all' />
 <style>
 .menu-list a {
      color: #3273dc;
