--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ a {
 <h1>第4回 北区こどもプログラミングコンテスト</h1>
 
 <figure class="image is-3by1">
-	<img class="is-rounded" src="./集合写真.jpg">
+	<img class="is-rounded" src="./img/2022pict.jpg">
 </figure>
 
 <p class="has-text-centered">
