--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ a {
 <h2><i class="fa fa-trophy has-text-grey"></i>優秀銀賞
 	<div class="has-text-centered">
 		No.143 
-		<span class="icon is-larg"><img src="https://scratch.mit.edu/favicon.ico"></span>
+		<span class="icon is-larg"><img src="https://microbit.org/favicon.ico"></span>
 		『ベルインペット』</div>
 	<div class="has-text-centered">宮澤 華蓮(小2)</div>
 </h2>
@@ -215,7 +215,7 @@ a {
 <h2>優秀賞
 	<div class="has-text-centered">
 		No.142 
-		<span class="icon is-larg"><img src="https://scratch.mit.edu/favicon.ico"></span>
+		<span class="icon is-larg"><img src="https://microbit.org/favicon.ico"></span>
 		『勉強用のマイクロビットタイマー』</div>
 	<div class="has-text-centered">後藤 慧至(小5)</div>
 </h2>
@@ -311,7 +311,7 @@ a {
 <h2>優秀賞
 	<div class="has-text-centered">
 		No.138 
-		<span class="icon is-larg"><img src="https://scratch.mit.edu/favicon.ico"></span>
+		<span class="icon is-larg"><img src="https://microbit.org/favicon.ico"></span>
 		『いっしょにあそぼう こころちゃん』</div>
 	<div class="has-text-centered">杉山 志帆(小1)</div>
 </h2>
@@ -378,7 +378,7 @@ a {
 <h2>審査委員賞
 	<div class="has-text-centered">
 		No.114 
-		<span class="icon is-larg"><img src="https://scratch.mit.edu/favicon.ico"></span>
+		<span class="icon is-larg"><img src="https://microbit.org/favicon.ico"></span>
 		『プログラミングのとう』</div>
 	<div class="has-text-centered">大戸 凜音(小2)</div>
 </h2>
@@ -519,7 +519,7 @@ a {
 <h2>審査委員賞
 	<div class="has-text-centered">
 		No.155 
-		<span class="icon is-larg"><img src="https://scratch.mit.edu/favicon.ico"></span>
+		<span class="icon is-larg"><img src="https://microbit.org/favicon.ico"></span>
 		『メジロくん消毒器』</div>
 	<div class="has-text-centered">原 優花(小4)</div>
 </h2>
